--- a/index.html
+++ b/index.html
@@ -521,9 +521,9 @@
 
 					               <div class="timeline-label">
 					                  <h2><a href="#">Associate Test Engineer</a> <span> AUG 2022- Present</span></h2>
-					                  <p><strong>VITA Technology | Karimnagar</strong><br>
+					                  <p><strong>VITA Technologies | Karimnagar</strong><br>
 										<ul>
-											<li>Currently working as an Associate Test Engineer at VITA Technology specializing in both manual and automation testing to ensure the quality and efficiency of software products.</li>
+											<li>Currently working as an Associate Test Engineer at VITA Technologies specializing in both manual and automation testing to ensure the quality and efficiency of software products.</li>
 											<li>Participate in test planning meetings and contribute to the creation of test plans and schedules.</li>
 											<li>Conducted analysis of user stories, requirements, and acceptance criteria to identify test scenarios and prioritize automation efforts.</li>
 											<li>Design, develop, and execute test cases, test scenarios, and test scripts based on project requirements and specifications.</li>
